# cfb27-save-editor

./: .gitignore  LICENSE  README.md  franchise_helper.js  live_process.py  package-lock.json  package.json  server.py  test_editor.py
.github/workflows/: windows-ci.yml
.requirements/: 016-upstream-cfb27-recruiting-code-and-data-import.md  017-recruiting-workbench-page.md  progress.txt
.superpowers/sdd/: final-fix-4-report.md
archive/: README.md
archive/legacy-hooks/: README.md
archive/legacy-hooks/native/: hook.cpp  injector.cpp  request_trace.cpp  response_guard.cpp  submit_probe.cpp
archive/legacy-hooks/scripts/: speed_guard_test.lua  speed_test.lua
archive/legacy-save-editor/: README.md  franchise_helper.js  live_dynasty.py  live_process.py  native_hook.py  package-lock.json  package.json  server.py  startup_hook.py  test_editor.py
archive/legacy-save-editor/electron/: main.js  preload.js
archive/legacy-save-editor/schema/: README.md
archive/legacy-save-editor/static/: app.js  index.html  styles.css
archive/research-tools/: README.md
archive/research-tools/docs/: live-lua-host.md
archive/research-tools/docs/superpowers/specs/: 2026-07-10-real-time-roster-rating-writes-design.md
archive/research-tools/tools/: find_string_xrefs.py  inspect_player_ratings.js  upstream_decode_maps.py
docs/: cli.md  frtk-profile-format.md  frtk-table-api.md  getting-started.md  lua-api.md  protocol.md  safety.md
docs/development/: building.md  release-checklist.md  restructure-pr-body.md
docs/research/: legacy-hook-findings.md  runtime-verification.md
docs/superpowers/plans/: 2026-07-10-real-time-roster-rating-writes.md  2026-07-11-cfb27-lua-hook-repository.md  2026-07-12-live-frtk-table-catalog.md  2026-07-16-patch1-build-reanchor.md
docs/superpowers/specs/: 2026-07-11-cfb27-lua-hook-repository-design.md  2026-07-12-live-frtk-table-catalog-design.md  2026-07-14-live-recruit-class-replacement-design.md  2026-07-15-board-mutation-api-design.md  2026-07-16-patch1-build-reanchor-design.md
examples/lua/: autorun.lua  events.lua  read-image-header.lua
native/: CMakeLists.txt
native/host/: frtk_catalog.cpp  frtk_catalog.h  frtk_discovery.cpp  frtk_discovery.h  frtk_field_schema.cpp  frtk_field_schema.h  frtk_lua_api.cpp  frtk_lua_api.h  frtk_profile.cpp  frtk_record_access.cpp  frtk_record_access.h  game_builds.generated.h  game_builds.json  lua_host.cpp  memory_reader.cpp  memory_reader.h  protocol.cpp  protocol.h
native/proxy/: cryptbase_proxy.cpp  cryptbase_proxy.def
native/smoke/: frtk_catalog_smoke.cpp  frtk_discovery_smoke.cpp  frtk_field_schema_smoke.cpp  frtk_lua_api_smoke.cpp  frtk_profile_smoke.cpp  frtk_record_access_smoke.cpp  memory_reader_smoke.cpp  protocol_smoke.cpp  startup_host_smoke.cpp
schema/: README.md
scripts/: build-frtk-profile.cjs  game-build-manifest.cjs  generate-game-builds.cjs  package-release.cjs  promote-game-build.cjs  run-tests.cjs
scripts/board-verification/: live-anchor.cjs  live-table-snapshot.cjs  reanchor-build.cjs  reanchor-evidence.cjs  reanchor-lib.cjs
static/: app.js  index.html  styles.css
tests/: archive-boundary.test.cjs  board-reanchor-cli.test.cjs  board-reanchor-evidence.test.cjs  board-reanchor.test.cjs  closed-gate-policy.test.cjs  frtk-lua-source-policy.test.cjs  game-build-manifest.test.cjs  game-build-promotion.test.cjs  native-layout.test.cjs  package-layout.test.cjs  release-package.test.cjs
tools/: recruiting_diff.py  recruiting_probe.py  upstream_decode_maps.py  upstream_import.py  upstream_label_confidence.py  upstream_tuning_export.py
